--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,13 +14,22 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Simple ListView"
+        android:layout_marginBottom="5dp"
+        android:text="fragmento categoría"
         android:textColor="@android:color/holo_blue_dark"
-        android:textSize="32sp"
-        android:layout_marginBottom="5dp"/>
+        android:textSize="32sp" />
 
     <ListView
         android:id="@+id/lvCategories"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="530dp">
+
+    </ListView>
+
+    <ImageView
+        android:id="@+id/buttonAgregar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@android:drawable/ic_input_add" />
+
 </LinearLayout>
