--- a/app/src/main/res/layout/activity_create_categories.xml
+++ b/app/src/main/res/layout/activity_create_categories.xml
@@ -4,17 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:context=".Activity_CreateCategory"
     android:background="@mipmap/fondo">
 
     <LinearLayout
+        android:id="@+id/linearLayout4"
         android:layout_width="375dp"
         android:layout_height="452dp"
-        android:layout_marginBottom="140dp"
+        android:layout_marginTop="70dp"
         android:background="#AEAEAE"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -133,7 +135,9 @@
         android:layout_height="102dp"
         android:background="@color/cardview_shadow_start_color"
         android:orientation="horizontal"
-        tools:layout_editor_absoluteY="629dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
+        app:layout_constraintVertical_bias="1.0">
 
         <Button
             android:id="@+id/button6"
@@ -143,7 +147,7 @@
             android:text="Guardar" />
 
         <Button
-            android:id="@+id/button5"
+            android:id="@+id/button7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
