--- a/app/src/main/res/layout/activity_modify_data.xml
+++ b/app/src/main/res/layout/activity_modify_data.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegisterActivity">
+    tools:context=".ModifyDataActivity">
 
     <EditText
         android:id="@+id/edit_Email_Registro"
@@ -23,12 +23,13 @@
         android:id="@+id/edit_Nombre_Registro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         android:ems="10"
         android:hint="Nombre"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="278dp" />
+        app:layout_constraintTop_toBottomOf="@+id/avatarView" />
 
     <EditText
         android:id="@+id/edit_Apellidos_Registro"
@@ -55,33 +56,35 @@
         app:layout_constraintTop_toBottomOf="@+id/edit_Email_Registro" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/GuardarModifUsu_BTN"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="Guardar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edit_Contra_Registro"
-        app:layout_constraintVertical_bias="0.44" />
+        app:layout_constraintHorizontal_bias="0.559"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/avatarView"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginStart="133dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="133dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="61dp"
-        tools:srcCompat="@color/cardview_light_background" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:srcCompat="@tools:sample/avatars" />
 
     <Button
         android:id="@+id/button9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="125dp"
         android:text="Imagen"
         app:layout_constraintStart_toEndOf="@+id/avatarView"
-        tools:layout_editor_absoluteY="139dp" />
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
